@@ -183,6 +183,42 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|util
+operator|.
+name|ModelerUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|AbstractAction
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|ImageIcon
+import|;
+end_import
+
+begin_import
+import|import
 name|javax
 operator|.
 name|swing
@@ -221,6 +257,28 @@ name|BorderLayout
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|FlowLayout
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|awt
+operator|.
+name|event
+operator|.
+name|ActionEvent
+import|;
+end_import
+
 begin_comment
 comment|/**  * @since 4.1  */
 end_comment
@@ -238,7 +296,7 @@ specifier|final
 name|String
 name|MAIN_LAYOUT
 init|=
-literal|"fill:160dlu, 5dlu, fill:50dlu, 5dlu, fill:160dlu"
+literal|"fill:160dlu:grow, 5dlu, fill:50dlu, 5dlu, fill:160dlu:grow"
 decl_stmt|;
 specifier|private
 specifier|static
@@ -246,7 +304,7 @@ specifier|final
 name|String
 name|HEADER_LAYOUT
 init|=
-literal|"fill:70dlu, 15dlu, fill:75dlu"
+literal|"fill:80dlu:grow"
 decl_stmt|;
 specifier|private
 specifier|static
@@ -271,6 +329,32 @@ name|int
 name|ALL_LINE_SPAN
 init|=
 literal|5
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|ImageIcon
+name|rightArrow
+init|=
+name|ModelerUtil
+operator|.
+name|buildIcon
+argument_list|(
+literal|"icon-arrow-closed.png"
+argument_list|)
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|ImageIcon
+name|downArrow
+init|=
+name|ModelerUtil
+operator|.
+name|buildIcon
+argument_list|(
+literal|"icon-arrow-open.png"
+argument_list|)
 decl_stmt|;
 specifier|private
 name|TreeToolbarPanel
@@ -611,69 +695,6 @@ argument_list|(
 literal|"Import Configuration"
 argument_list|)
 expr_stmt|;
-name|ReverseEngineeringAction
-name|reverseEngineeringAction
-init|=
-name|projectController
-operator|.
-name|getApplication
-argument_list|()
-operator|.
-name|getActionManager
-argument_list|()
-operator|.
-name|getAction
-argument_list|(
-name|ReverseEngineeringAction
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|reverseEngineeringAction
-operator|.
-name|setView
-argument_list|(
-name|this
-argument_list|)
-expr_stmt|;
-name|CayenneAction
-operator|.
-name|CayenneToolbarButton
-name|reverseEngineeringButton
-init|=
-operator|(
-name|CayenneAction
-operator|.
-name|CayenneToolbarButton
-operator|)
-name|reverseEngineeringAction
-operator|.
-name|buildButton
-argument_list|(
-literal|0
-argument_list|)
-decl_stmt|;
-name|reverseEngineeringButton
-operator|.
-name|setShowingText
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
-name|reverseEngineeringButton
-operator|.
-name|setText
-argument_list|(
-literal|"Run Import"
-argument_list|)
-expr_stmt|;
-name|reverseEngineeringHeaderBuilder
-operator|.
-name|append
-argument_list|(
-name|reverseEngineeringButton
-argument_list|)
-expr_stmt|;
 name|builder
 operator|.
 name|append
@@ -743,7 +764,7 @@ name|loadDbSchemaButton
 operator|.
 name|setShowingText
 argument_list|(
-literal|true
+literal|false
 argument_list|)
 expr_stmt|;
 name|loadDbSchemaButton
@@ -753,11 +774,106 @@ argument_list|(
 literal|"Refresh DB Schema"
 argument_list|)
 expr_stmt|;
-name|databaseHeaderBuilder
+name|treeToolbar
 operator|.
-name|append
+name|add
 argument_list|(
 name|loadDbSchemaButton
+argument_list|)
+expr_stmt|;
+name|ReverseEngineeringAction
+name|reverseEngineeringAction
+init|=
+name|projectController
+operator|.
+name|getApplication
+argument_list|()
+operator|.
+name|getActionManager
+argument_list|()
+operator|.
+name|getAction
+argument_list|(
+name|ReverseEngineeringAction
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|reverseEngineeringAction
+operator|.
+name|setView
+argument_list|(
+name|this
+argument_list|)
+expr_stmt|;
+name|CayenneAction
+operator|.
+name|CayenneToolbarButton
+name|reverseEngineeringButton
+init|=
+operator|(
+name|CayenneAction
+operator|.
+name|CayenneToolbarButton
+operator|)
+name|reverseEngineeringAction
+operator|.
+name|buildButton
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|reverseEngineeringButton
+operator|.
+name|setShowingText
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|reverseEngineeringButton
+operator|.
+name|setText
+argument_list|(
+literal|"Run Import"
+argument_list|)
+expr_stmt|;
+name|JPanel
+name|reverseEngineeringButtonPanel
+init|=
+operator|new
+name|JPanel
+argument_list|()
+decl_stmt|;
+name|reverseEngineeringButtonPanel
+operator|.
+name|setLayout
+argument_list|(
+operator|new
+name|FlowLayout
+argument_list|(
+name|FlowLayout
+operator|.
+name|RIGHT
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|reverseEngineeringButtonPanel
+operator|.
+name|add
+argument_list|(
+name|reverseEngineeringButton
+argument_list|)
+expr_stmt|;
+name|treeToolbar
+operator|.
+name|addSeparator
+argument_list|()
+expr_stmt|;
+name|treeToolbar
+operator|.
+name|add
+argument_list|(
+name|reverseEngineeringButtonPanel
 argument_list|)
 expr_stmt|;
 name|builder
@@ -887,6 +1003,11 @@ argument_list|,
 name|ALL_LINE_SPAN
 argument_list|)
 expr_stmt|;
+name|createAdvancedOptionsHiderPanel
+argument_list|(
+name|builder
+argument_list|)
+expr_stmt|;
 name|builder
 operator|.
 name|append
@@ -915,6 +1036,128 @@ argument_list|,
 name|BorderLayout
 operator|.
 name|CENTER
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+name|void
+name|createAdvancedOptionsHiderPanel
+parameter_list|(
+name|DefaultFormBuilder
+name|builder
+parameter_list|)
+block|{
+name|JPanel
+name|advancedOptionsPanel
+init|=
+operator|new
+name|JPanel
+argument_list|()
+decl_stmt|;
+name|advancedOptionsPanel
+operator|.
+name|setLayout
+argument_list|(
+operator|new
+name|FlowLayout
+argument_list|(
+name|FlowLayout
+operator|.
+name|LEFT
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|JButton
+name|hideButton
+init|=
+operator|new
+name|JButton
+argument_list|(
+literal|"Advanced Options"
+argument_list|)
+decl_stmt|;
+name|hideButton
+operator|.
+name|setIcon
+argument_list|(
+name|configPanel
+operator|.
+name|isVisible
+argument_list|()
+condition|?
+name|downArrow
+else|:
+name|rightArrow
+argument_list|)
+expr_stmt|;
+name|hideButton
+operator|.
+name|setBorderPainted
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|hideButton
+operator|.
+name|addActionListener
+argument_list|(
+operator|new
+name|AbstractAction
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|actionPerformed
+parameter_list|(
+name|ActionEvent
+name|e
+parameter_list|)
+block|{
+name|configPanel
+operator|.
+name|setVisible
+argument_list|(
+operator|!
+name|configPanel
+operator|.
+name|isVisible
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|hideButton
+operator|.
+name|setIcon
+argument_list|(
+name|configPanel
+operator|.
+name|isVisible
+argument_list|()
+condition|?
+name|downArrow
+else|:
+name|rightArrow
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|advancedOptionsPanel
+operator|.
+name|add
+argument_list|(
+name|hideButton
+argument_list|)
+expr_stmt|;
+name|builder
+operator|.
+name|append
+argument_list|(
+name|advancedOptionsPanel
+argument_list|,
+name|ALL_LINE_SPAN
 argument_list|)
 expr_stmt|;
 block|}
@@ -1122,6 +1365,26 @@ operator|new
 name|ReverseEngineeringConfigPanel
 argument_list|(
 name|projectController
+argument_list|)
+expr_stmt|;
+name|configPanel
+operator|.
+name|setLayout
+argument_list|(
+operator|new
+name|FlowLayout
+argument_list|(
+name|FlowLayout
+operator|.
+name|LEFT
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|configPanel
+operator|.
+name|setVisible
+argument_list|(
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
