@@ -355,6 +355,16 @@ name|javax
 operator|.
 name|swing
 operator|.
+name|ScrollPaneLayout
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
 name|SwingUtilities
 import|;
 end_import
